# PyStars

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_evaluation.py
PyAIStatus/: __init__.py  baseline.py  data.py  efficiency.py  environment.py  evaluation.py  explainability.py  metrics.py  model.py  plots.py  preprocessing.py  reporting.py  robustness.py  statistical_tests.py
PyAIStatus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
evaluation_results/: error_report.html  readme.txt  report.html  summary.txt
scripts/: evaluate_model.py
tests/: test_data.py  test_metrics.py  test_model.py
