[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyAIStatus"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A Python library for comprehensive AI model evaluation."
readme = "README.md"
requires-python = ">=3.8, <3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tensorflow>=2.8,<2.10",
    "scikit-learn",
    "pandas",
    "matplotlib",
    "seaborn",
    "numpy<2.0",
    "opencv-python",
    "tqdm",
    "tf-keras-vis", 
]